[package]
name = "irrigate"
version = "0.1.0"
authors = ["coderconvoy <thebeaky@psmail.net>"]
edition = "2018"

[dependencies]


lazy_conf = { path = "../../mlibs/lazy_conf"}
mksvg = { path = "../../mlibs/mksvg"}
clap_conf = {path = "../../mlibs/clap_conf"}
failure = "0.1.5"
failure_derive = "0.1.5"
